--- a/clase23.html
+++ b/clase23.html
@@ -7,14 +7,17 @@
 </head>
 <body>
  
-
+    <div id= "resultado" ></div>
 
 <script>
-var valor1=true;
-var valor2=false;
-document.write(valor1+'<br>');
-document.write(valor2);
+var valores= [10,30,40,20];
+
+var resultado = valores [0]+ valores [1]+ valores[2]+ valores[3];
+document.getElementById('resultado').innerHTML="Resultado: "+resultado;
+
 
 </script>
+
+
 </body>
 </html>
