--- a/clase23.html
+++ b/clase23.html
@@ -10,9 +10,17 @@
     <div id= "resultado" ></div>
 
 <script>
-var valores= [10,30,40,20];
+var valores= [1,2,3,4,5,6,7,8,9,10];
+var valores=[1,3,5,7,9]
+var resultado = valores [0]+ valores [1]+ valores[2]+ valores[3]+ valores[4];
+document.getElementById('resultado').innerHTML="Resultado: "+resultado;
 
-var resultado = valores [0]+ valores [1]+ valores[2]+ valores[3];
+var valores=[2,4,6,8,10]
+var resultado = valores [0]+ valores [1]+ valores[2]+ valores[3]+ valores[4];
+document.getElementById('resultado').innerHTML="Resultado: "+resultado;
+
+var valores=[5,10]
+var resultado = valores [0]+ valores [1]+ valores;
 document.getElementById('resultado').innerHTML="Resultado: "+resultado;
 
 
