--- a/clase23.html
+++ b/clase23.html
@@ -7,21 +7,28 @@
 </head>
 <body>
  
-    <div id= "resultado" ></div>
+<div id= "resultado1" ></div>
 
+    <div id= "resultado2" ></div>
+
+    <div id= "resultado3" ></div>
 <script>
 var valores= [1,2,3,4,5,6,7,8,9,10];
 var valores=[1,3,5,7,9]
 var resultado = valores [0]+ valores [1]+ valores[2]+ valores[3]+ valores[4];
-document.getElementById('resultado').innerHTML="Resultado: "+resultado;
+document.getElementById('resultado1').innerHTML="Resultado1: "+resultado;
+
+
 
 var valores=[2,4,6,8,10]
 var resultado = valores [0]+ valores [1]+ valores[2]+ valores[3]+ valores[4];
-document.getElementById('resultado').innerHTML="Resultado: "+resultado;
+document.getElementById('resultado2').innerHTML="Resultado2: "+resultado;
+
+
 
 var valores=[5,10]
-var resultado = valores [0]+ valores [1]+ valores;
-document.getElementById('resultado').innerHTML="Resultado: "+resultado;
+var resultado = valores [0]+ valores [1];
+document.getElementById('resultado3').innerHTML="Resultado3: "+resultado;
 
 
 </script>
