--- a/clase23.html
+++ b/clase23.html
@@ -7,21 +7,41 @@
 </head>
 <body>
  
-<div id= "resultado" ></div>
-
+<div id= "resultado1" ></div>
+<div id= "resultado2" ></div>
+<div id= "resultado3" ></div>
+<div id= "resultado4" ></div>
 
 <script>
 function sumar()
 {
 
-valor1=parseInt(prompt("Vamos a sumar 2 numeros. Ingrese el numero uno:  "));
-valor2=parseInt(prompt("Ingrese numero dos:"  ));
+valor1=(prompt("Ingrese su nombre:"));
+valor2=parseInt(prompt("Ingrese su numero para x:"  ));
+valor3=parseInt(prompt("Ingrese su numero para y:"));
+valor4=parseInt(prompt("Ingrese su numero para z:"));
 
-var resultado= valor1+valor2;
-document.getElementById("resultado").innerHTML="La funcion obtiene la siguiente suma: " + resultado;
+var resultado= valor1;
+document.getElementById("resultado1").innerHTML="Su nombre es : " + resultado;
+
+
+var resultado= valor2+valor3+valor4;
+document.getElementById("resultado2").innerHTML="La funcion obtiene la siguiente suma es: " + resultado;
+
+
+var resultado= valor2*valor3*valor4;
+document.getElementById("resultado3").innerHTML="La funcion obtiene la siguiente multiplicacion es: " + resultado;
+
+
+
+var resultado= valor2-valor3-valor4;
+document.getElementById("resultado4").innerHTML="La funcion obtiene la siguiente resta es: " + resultado;
+
+
+
+
 
 }
-
 sumar();
 
 </script>
